<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_drawer_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/aboutUsDrawer"
            android:title="@string/drawer_item5" />
        <item
            android:id="@+id/profileDrawer"
            android:title="@string/drawer_item1" />
        <item
            android:id="@+id/contactUsDrawer"
            android:title="@string/drawer_item6" />
        <!--<item
            android:id="@+id/orderDrawer"
            android:title="@string/drawer_item2" />-->
        <item
            android:id="@+id/cartDrawer"
            android:title="@string/drawer_item3" />
        <item
            android:id="@+id/logInDrawer"
            android:enabled="true"
            android:title="@string/drawer_item4" />
    </group>



</menu>
