<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userAccount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/normalMargin"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/normalPadding"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/loginForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/normalMargin"
        android:padding="@dimen/normalPadding"
        android:text="@string/login"
        android:textColor="@color/normalText"
        android:textSize="@dimen/bodyTextSmall" />

    <TextView
        android:id="@+id/loginErrorStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/normalMargin"
        android:padding="@dimen/normalPadding"
        android:textColor="@color/red"
        android:textSize="@dimen/bodyTextSmall" />

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/imageMargin"
        android:ems="20"
        android:hint="@string/userIdHint"
        android:inputType="phone"
        android:padding="@dimen/normalPadding"
        android:textColor="@color/black"
        android:textColorHint="@color/disable"
        android:textSize="@dimen/buttonText" />

    <EditText
        android:id="@+id/userPasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/imageMargin"
        android:ems="20"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:padding="@dimen/normalPadding"
        android:textColor="@color/black"
        android:textColorHint="@color/disable"
        android:textSize="@dimen/buttonText" />

    <Button
        android:id="@+id/loginSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/buttonMargin"
        android:background="@drawable/button_shape"
        android:padding="@dimen/normalPadding"
        android:text="@string/submitText"
        android:textColor="@color/buttonText"
        android:textSize="@dimen/buttonText" />

    <Button
        android:id="@+id/loginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/normalText"
        android:textSize="@dimen/buttonText" />

    <TextView
        android:id="@+id/loginRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normalMargin"
        android:padding="@dimen/normalPadding"
        android:text="@string/signup"
        android:textColor="@color/normalText"
        android:textSize="@dimen/bodyTextSmall" />

    <Button
        android:id="@+id/signUpSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/buttonMargin"
        android:background="@drawable/button_shape"
        android:padding="@dimen/normalPadding"
        android:text="@string/signupButtonText"
        android:textColor="@color/buttonText"
        android:textSize="@dimen/buttonText" />
    <!--</FrameLayout>-->

</LinearLayout>