<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/normalMargin"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/normalPadding"
    tools:context=".RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normalMargin"
                android:padding="@dimen/normalPadding"
                android:text="@string/register"
                android:textColor="@color/normalText"
                android:textSize="@dimen/bodyTextSmall" />

            <TextView
                android:id="@+id/registerErrorStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/buttonMargin"
                android:padding="@dimen/normalPaddingLite"
                android:textColor="@color/red"
                android:textSize="@dimen/bodyTextSmall" />

            <TextView
                android:id="@+id/registerNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigMargin"
                android:layout_marginTop="@dimen/buttonMargin"
                android:layout_marginBottom="@dimen/buttonMargin"
                android:text="@string/nameText"
                android:textColor="@color/black"
                android:textSize="@dimen/bodyTextSmall" />

            <EditText
                android:id="@+id/registerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigMargin"
                android:layout_marginTop="@dimen/imageMargin"
                android:layout_marginBottom="@dimen/imageMargin"
                android:ems="20"
                android:hint="@string/userNameHint"
                android:inputType="textPersonName"
                android:padding="@dimen/normalPadding"
                android:textColor="@color/black"
                android:textColorHint="@color/disable"
                android:textSize="@dimen/buttonText" />

            <TextView
                android:id="@+id/registerPhoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigMargin"
                android:layout_marginTop="@dimen/buttonMargin"
                android:layout_marginBottom="@dimen/buttonMargin"
                android:text="@string/phoneText"
                android:textColor="@color/black"
                android:textSize="@dimen/bodyTextSmall" />

            <EditText
                android:id="@+id/registerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigMargin"
                android:layout_marginTop="@dimen/imageMargin"
                android:layout_marginBottom="@dimen/imageMargin"
                android:ems="20"
                android:hint="@string/userIdHint"
                android:inputType="phone"
                android:padding="@dimen/normalPadding"
                android:textColor="@color/black"
                android:textColorHint="@color/disable"
                android:textSize="@dimen/buttonText" />


            <TextView
                android:id="@+id/registerAddressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigMargin"
                android:layout_marginTop="@dimen/buttonMargin"
                android:layout_marginBottom="@dimen/buttonMargin"
                android:text="@string/addressText"
                android:textColor="@color/black"
                android:textSize="@dimen/bodyTextSmall" />

            <EditText
                android:id="@+id/registerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigMargin"
                android:layout_marginTop="@dimen/imageMargin"
                android:layout_marginBottom="@dimen/imageMargin"
                android:ems="20"
                android:hint="@string/addressHint"
                android:inputType="textPostalAddress"
                android:padding="@dimen/normalPadding"
                android:textColor="@color/black"
                android:textColorHint="@color/disable"
                android:textSize="@dimen/buttonText" />

            <TextView
                android:id="@+id/registerPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigMargin"
                android:layout_marginTop="@dimen/buttonMargin"
                android:layout_marginBottom="@dimen/buttonMargin"
                android:text="@string/passwordText"
                android:textColor="@color/black"
                android:textSize="@dimen/bodyTextSmall" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigMargin"
                android:layout_marginTop="@dimen/imageMargin"
                android:layout_marginBottom="@dimen/imageMargin"
                android:ems="20"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:padding="@dimen/normalPadding"
                android:textColor="@color/black"
                android:textColorHint="@color/disable"
                android:textSize="@dimen/buttonText" />

            <TextView
                android:id="@+id/registerRePasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigMargin"
                android:layout_marginTop="@dimen/buttonMargin"
                android:layout_marginBottom="@dimen/buttonMargin"
                android:text="@string/rePasswordText"
                android:textColor="@color/black"
                android:textSize="@dimen/bodyTextSmall" />

            <EditText
                android:id="@+id/registerReTypePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigMargin"
                android:layout_marginTop="@dimen/imageMargin"
                android:layout_marginBottom="@dimen/imageMargin"
                android:ems="20"
                android:hint="@string/rePasswordHint"
                android:inputType="textPassword"
                android:padding="@dimen/normalPadding"
                android:textColor="@color/black"
                android:textColorHint="@color/disable"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/registerSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/buttonMargin"
                android:background="@drawable/button_shape"
                android:padding="@dimen/normalPadding"
                android:text="@string/submitText"
                android:textColor="@color/buttonText"
                android:textSize="@dimen/buttonText" />
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/registerRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:padding="@dimen/normalPaddingLite"
        android:textColor="@color/black"
        android:text="@string/requireText"
        android:textSize="@dimen/bodyTextSmall" />
</LinearLayout>